Add Spring Boot 2.x Compatibility Support
- Replaced Java records with standard classes for better compatibility with older JDK versions.
- Reverted from modern `.toList()` APIs to `Collectors.toList()` for compatibility with older Java 8.
- Adjusted property validations and used `String.trim().isEmpty()` instead of `String.isBlank()` for Java 8 support.
- Simplified interfaces by removing sealed keywords and unnecessary hierarchy restrictions.
- Downgraded Spring Boot version to 2.4.0 and Java version to 1.8 in `pom.xml`.
- Replaced switch expressions and other JDK 17 features with Java 8 compatible constructs.
- Applied minor cleanup for consistent API and configuration handling.